Fixed the display of menu item and icon for the visibility when text wraps 2 lines

--- a/src/app/record/components/work-stack-group/work-stack-group.component.scss
+++ b/src/app/record/components/work-stack-group/work-stack-group.component.scss
@@ -74,6 +74,7 @@ button {
   margin-inline-start: 8px;
   height: 38px;
   margin-top: 6px;
+  margin-right: 6px;
 }
 
 ::ng-deep button.text-align-center {
@@ -87,10 +88,27 @@ button.mat-menu-item {
   & > div {
     & > mat-icon {
       display: flex;
-      align-items: center;
+      align-items: center;  
+      font-size: 24px;
+      height: 24px ;
+      width: 24px ;
     }
     display: inline-block;
     vertical-align: middle;
+    line-height: 1.5;
+  }
+
+  & > span {
+    & > mat-icon {
+      display: flex;
+      align-items: center;  
+      font-size: 24px;
+      height: 24px ;
+      width: 24px ;
+    }
+    display: inline-block;
+    vertical-align: middle;
+    line-height: 1.5;
   }
 
   max-width: 350px;
@@ -99,9 +117,17 @@ button.mat-menu-item {
   padding: 0 16px 0 16px;
   margin-left: 0;
   display: flex;
-  align-items: center;
+  align-items: center; 
 }
 
 ::ng-deep .menu-buttons {
   max-width: none;
+}
+
+.visibilityIconSize {
+  display: flex;
+  align-items: center;  
+  font-size: 20px !important;
+  height: 24px ;
+  width: 26px ;
 }
